--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,14 +10,13 @@ env:
   APP_NAME: "812 Zodiac Megaways"
   
   ChatID_APK: "1034562126"
-  ChatID_AAB: "1034562126"
   BotToken: "5541471253:AAFGq-cwlYERC9nSYc68_94bWOH0Fx1KkVU"
   
   
 jobs:
         
   buildAndroidAPK:
-    name: Build for Android(APK)
+    name: Build ${{ env.APP_NAME}}.apk
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -26,35 +25,6 @@ jobs:
           - Android
     steps:
     
-      - name: Checkout
-        uses: actions/checkout@v2.4.2
-          
-      - uses: actions/cache@v2
-        with:
-          path: Library
-          key: Library-${{ matrix.targetPlatform }}
-          restore-keys: Library-
-          
-      - uses: game-ci/unity-builder@v2.1.2
-        id: buildApk
-        with:
-          buildName: ${{ env.APP_NAME }}
-          targetPlatform: ${{ matrix.targetPlatform }}
-          
-      - uses: actions/upload-artifact@v2
-        with:
-          name: ${{ env.APP_NAME }}
-          path: build/Android
-          
-  buildAndroidAAB:
-    name: Build for Android(AAB)
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        targetPlatform:
-          - Android
-    steps:
       - name: Checkout
         uses: actions/checkout@v2.4.2
           
@@ -74,10 +44,10 @@ jobs:
           name: ${{ env.APP_NAME }}
           path: build/Android
               
-  SendTelegramNotify:
+  SendApkToTelegram:
     runs-on: ubuntu-latest
-    needs: [buildAndroidAPK,buildAndroidAAB]
-    name: Send Telegram Notify
+    needs: buildAndroidAPK
+    name: Send APK to Telegram
     
     steps: 
       - uses: actions/checkout@v2
@@ -95,11 +65,3 @@ jobs:
               token: ${{ env.BotToken }}
               message: " "
               document: '${{ github.workspace }}/build/Android/${{ env.APP_NAME }}.apk'
-              
-      - name: send aab
-        uses: appleboy/telegram-action@master
-        with:
-              to: ${{ env.ChatID_AAB }}
-              token: ${{ env.BotToken }}
-              message: " "
-              document: '${{ github.workspace }}/build/Android/${{ env.APP_NAME }}.aab'
