--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,6 @@ jobs:
       - uses: actions/checkout@v2
       
       - uses: actions/download-artifact@v2
-        id: download
         with:
             name: ${{ env.APP_NAME }}
             path: ${{ github.workspace }}/build/Android
@@ -61,7 +60,7 @@ jobs:
       - name: send apk
         uses: appleboy/telegram-action@master
         with:
-              to: ${{ env.ChatID_AAB }}
+              to: ${{ env.ChatID_APK }}
               token: ${{ env.BotToken }}
               message: " "
               document: '${{ github.workspace }}/build/Android/${{ env.APP_NAME }}.apk'
